2012-07-03  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/3351
	* ld-elf/indirect.exp: New file.
	* ld-elf/indirect1a.c: Likewise.
	* ld-elf/indirect1b.c: Likewise.
	* ld-elf/indirect1c.c: Likewise.
	* ld-elf/indirect2.c: Likewise.
	* ld-elf/indirect3.out: Likewise.
	* ld-elf/indirect3a.c: Likewise.
	* ld-elf/indirect3b.c: Likewise.
	* ld-elf/indirect3c.c: Likewise.
	* ld-elf/indirect4.out: Likewise.
	* ld-elf/indirect4a.c: Likewise.
	* ld-elf/indirect4b.c: Likewise.
	* ld-elf/indirect4c.c: Likewise.

2012-07-02  Roland McGrath  <mcgrathr@google.com>

	* ld/testsuite/ld-i386/tlsbin-nacl.rd: Update for symbol table changes.
	* ld/testsuite/ld-i386/tlsbindesc-nacl.rd: Likewise.
	* ld/testsuite/ld-i386/tlsdesc-nacl.rd: Likewise.
	* ld/testsuite/ld-i386/tlsgdesc-nacl.rd: Likewise.
	* ld/testsuite/ld-i386/tlsnopic-nacl.rd: Likewise.
	* ld/testsuite/ld-i386/tlspic-nacl.rd: Likewise.
	* ld/testsuite/ld-x86-64/tlsbin-nacl.rd: Likewise.
	* ld/testsuite/ld-x86-64/tlsbindesc-nacl.rd: Likewise.
	* ld/testsuite/ld-x86-64/tlsdesc-nacl.rd: Likewise.
	* ld/testsuite/ld-x86-64/tlsgdesc-nacl.rd: Likewise.
	* ld/testsuite/ld-x86-64/tlspic-nacl.rd: Likewise.

2012-07-02  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-elf/data2.c: New file.
	* ld-elf/weakdef1.c: Likewise.

	* ld-elf/shared.exp: Add tests for libdata2 and weakdef1.

2012-06-28  Roland McGrath  <mcgrathr@google.com>

	* ld-arm/arm-elf.exp (armelftests_common): Add a test that gets
	arm-lib.so built so armeabitests_common can use it.
	(unresolved-1-dyn): Exclude this test for [istarget "arm*-*-nacl*"].

2012-06-26  Roland McGrath  <mcgrathr@google.com>

	* ld-elf/ehdr_start.d (target): Add *-*-nacl*.

2012-06-27  Alan Modra  <amodra@gmail.com>

	* ld-elf/ehdr_start.s: Use data rather than rodata.
	* ld-elf/ehdr_start.d: Run on linux and gnu targets only.

2012-06-25  Roland McGrath  <mcgrathr@google.com>

	* ld-elf/ehdr_start.d (ld): Add explicit -e _start.
	(notarget): Add arm*-*-eabi* cris-*-*.
