@@ -1,3 +1,12 @@
+2012-07-09  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR ld/14323
+	* ld-elf/pr14323-1.c: New.
+	* ld-elf/pr14323-2.c: Likewise.
+
+	* ld-elf/shared.exp (build_tests): Add libpr14323-2.so.
+	(run_tests): Add pr14323.
+
 2012-07-03  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR ld/3351
